# ArcGIS-python-backend

./: .gitignore  app.py  arcGIStest.py  pyproject.toml  ressources.py
data/: stations_test.geojson
