[tool.poetry]
name = "arcgisbackendtest"
version = "0.1.0"
description = ""
authors = ["'MED' <'rickyblackwall@gmail.com'>"]

[tool.poetry.dependencies]
python = "^3.6"
arcgis = "^1.8.2"
falcon = "^2.0.0"
falcon-cors = "^1.1.7"
waitress = "^1.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
